# unclutter-xfixes

./: configure.ac
man/: Makefile.am
src/: Makefile.am
